Bug 435825 - Password entries get permanently disabled after error
Summary: Password entries get permanently disabled after error
Status: RESOLVED FIXED
Alias: None
Product: plasma-pass
Classification: Unmaintained
Component: General (other bugs)
Version First Reported In: 1.2.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Vrátil
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-16 17:21 UTC by Ihor Antonov
Modified: 2023-03-01 20:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ihor Antonov 2021-04-16 17:21:45 UTC
SUMMARY

When gpg key for decrypting passwords is not available clicking on password entries makes them permanently disabled, with no possibility to click again.

STEPS TO REPRODUCE
1. Remove yubikey from USB slot, or remove key from keyring.
2. Click on any password in plasma-pass applet.
3. Observe the error. You can never click on this password again.

OBSERVED RESULT
Password entry shows error message and can never be clicked again.


EXPECTED RESULT
Subsequent clicks should clear error message and re-attempt getting the password.
Comment 1 Daniel Vrátil 2023-03-01 20:37:11 UTC
Git commit 99bb65c0a1189b8f883cc371e6a61c75926622a9 by Daniel Vrátil.
Committed on 01/03/2023 at 20:33.
Pushed by dvratil into branch 'master'.

Clicking on pass in error state re-attempts getting the password

When user cancels the passphrase request or enters wrong passphrase
three times, the password entry in the view is stuck in error state
for ever with no way to retrieve the password again until the applet
is restarted.

This change allows the password entry to be clicked even when it is
in the error state and it will try to obtain the password again.
FIXED-IN: 1.2.1

M  +3    -0    package/contents/ui/PasswordsPage.qml
M  +12   -0    plugin/providerbase.cpp
M  +3    -0    plugin/providerbase.h

https://invent.kde.org/plasma/plasma-pass/commit/99bb65c0a1189b8f883cc371e6a61c75926622a9